--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<td>
 							<a href="#about" style="text-decoration:none">
 								<font face="Verdana" size="4" color=black>
-									เกี่ยวกับฉัน
+									เกี่ยวกับฉัน ll
 								</font>
 							</a>
 						</td>
@@ -59,7 +59,7 @@
 						<td>
 							<a href="#projects" style="text-decoration:none">
 								<font face="Verdana" size="4" color=black>
-									โปรเจค
+									โปรเจค Wow
 								</font>
 							</a>
 						</td>
